--- a/src/main/webapp/WEB-INF/views/create.html
+++ b/src/main/webapp/WEB-INF/views/create.html
@@ -12,16 +12,24 @@
             <tr>
                 <th>Employee Code</th>
                 <td><input type="text" th:field="*{employeeCode}"></td>
-            </tr>            <tr>
+                <td><span th:if="${#fields.hasErrors('employeeCode')}" th:errors="*{employeeCode}"></span></td>
+            </tr>
+            <tr>
                 <th>Name</th>
                 <td><input type="text" th:field="*{name}"></td>
-            </tr>            <tr>
+                <td><span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span></td>
+            </tr>
+            <tr>
                 <th>Age</th>
                 <td><input type="text" th:field="*{age}"></td>
-            </tr>            <tr>
+                <td><span th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></span></td>
+            </tr>
+            <tr>
                 <th>Salary</th>
                 <td><input type="text" th:field="*{salary}"></td>
-            </tr>            <tr>
+                <td><span th:if="${#fields.hasErrors('salary')}" th:errors="*{salary}"></span></td>
+            </tr>
+            <tr>
                 <th>Branch</th>
                 <td><select th:field="*{branch}">
                     <option th:each="br:${branches}" th:value="${br.id}" th:text="${br.name}"></option>
@@ -29,7 +37,9 @@
             </tr>
             <tr>
                 <td><a href="/home" class="btn btn-primary">Cancel</a></td>
-                <td><button type="submit"> Create</button></td>
+                <td>
+                    <button type="submit"> Create</button>
+                </td>
             </tr>
         </table>
     </form>
